springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-app
          image: assesmentregistry.azurecr.io/assesmentregistry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
